# StateSpaceCPP

./: .gitignore  LICENSE  README.md  StateSpaceCPlusPlus.sln
StateSpaceCPlusPlus/: StateSpaceCPlusPlus.vcxproj  StateSpaceCPlusPlus.vcxproj.filters  UHMath.h  launcher.cpp  matlab_implementation.m  outputs.txt
StateSpaceCPlusPlus/Timer/: CTimer.cpp  CTimer.h
code/: .clang-format  CMakeLists.txt  TimeTypes.hpp  lqr.hpp  main.cpp  math.hpp  timer.cpp  timer.hpp
data/: outputs.txt
